<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sign"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />


    <TextView
        android:id="@+id/loginTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign"
        app:layout_constraintTop_toBottomOf="@id/logoImg"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="27dp"
        android:textColor="@color/black"
        android:textSize="37sp"
        />

    <TextView
        android:id="@+id/descriptionTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginTxt"
        app:layout_constraintStart_toStartOf="@id/loginTxt"
        android:text="@string/enter_Sign"
        android:layout_marginTop="7dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/phoneNumTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/descriptionTxt"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="27dp"
        android:layout_marginTop="17dp"
        android:text="phone_number"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/phoneNumEd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/phoneNumTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="27dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/grey"
        android:hint="@string/phone_number"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/emailTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/phoneNumEd"
        app:layout_constraintStart_toStartOf="@id/phoneNumTxt"
        android:layout_marginTop="7dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/emailEd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailTxt"
        app:layout_constraintStart_toStartOf="@id/phoneNumEd"
        android:background="@drawable/grey"
        app:layout_constraintEnd_toEndOf="@id/phoneNumEd"
        android:padding="10dp"
        android:hint="@string/email"
        android:layout_marginTop="7dp"
        android:inputType="textEmailAddress"

        />
    <TextView
        android:id="@+id/cityTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailEd"
        app:layout_constraintStart_toStartOf="@id/emailTxt"
        android:layout_marginTop="7dp"
        android:text="@string/city"
        android:textColor="@color/black"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/cityEd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/grey"
        android:hint="@string/city"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@id/emailEd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/emailEd"
        app:layout_constraintTop_toBottomOf="@id/cityTxt" />

    <TextView
        android:id="@+id/passwordTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cityEd"
        app:layout_constraintStart_toStartOf="@id/cityTxt"
        android:layout_marginTop="7dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/passEd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordTxt"
        app:layout_constraintStart_toStartOf="@id/emailEd"
        android:background="@drawable/grey"
        app:layout_constraintEnd_toEndOf="@id/emailEd"
        android:padding="10dp"
        android:hint="@string/password"
        android:layout_marginTop="7dp"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passEd"
        android:layout_marginTop="47dp"
        android:layout_marginHorizontal="44dp"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:text="@string/sign"
        />



</androidx.constraintlayout.widget.ConstraintLayout>